--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.22.2"
 replit = "^3.2.4"
 scratchattach = "^0.6.8"
 better-profanity = "^0.7.0"
+"googlesearch.py" = "^1.3"
 
 [tool.poetry.dev-dependencies]
 
